--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -108,8 +108,8 @@ input[type=number] {-moz-appearance: textfield;}
 .f-size-18{font-size: var(--f-size-18)}
 .f-size-20{font-size: var(--f-size-20)}
 .f-size-22{font-size: var(--f-size-22)}
-.f-size-24{font-size: var(--f-size-28)}
-.f-size-28{font-size: var(--f-size-24)}
+.f-size-24{font-size: var(--f-size-24)}
+.f-size-28{font-size: var(--f-size-28)}
 .f-size-34{font-size: var(--f-size-34)}
 .f-size-60{font-size: var(--f-size-60)}
 .mb__5{margin-bottom: 0.313rem}
@@ -362,6 +362,26 @@ animation: tp-rotateplane 1.2s infinite ease-in-out;border-radius: 0.5rem;}
     content: '-';
     text-align: center;
 }
+
+.cb_linkBtn { display: inline-flex; align-items: center; gap: .75rem; font-size: var(--f-size-16); padding: 0; border-radius: 0; border: none; color: #677E67; }
+.cb_cmnBtn {background: linear-gradient(90deg, #318138 0%, #45A14D 100%) !important;color: #fff !important; border: 1px solid transparent !important;border-radius: .5rem;padding: .5rem .875rem; font-weight: 500; line-height: 1.2;display: inline-flex;justify-content: center; align-items: center; gap: .5rem;min-height: 2.5rem;}
+.cb_cmnBtn.btn-o {background: transparent !important;border-color: rgba(69, 161, 77, 0.2) !important; color: #000 !important;}
+.cb_prodDtl_img { border: 1px solid #D9D9D9; border-radius: .625rem; }
+.cb_cstLabel { border: 1px solid rgba(69, 161, 77, 0.2); border-radius: 8px; font-size: var(--f-size-14); font-weight: 500; color: #000; padding: .375rem .625rem; min-width: 6.25rem; line-height: 1.3; text-align: center; }
+.cb_cstLabel.fill { background-color: var(--clr-green); color: #fff; }
+.cb_prod_title { font-size: 2.375rem; line-height: 1.3; }
+.cb_prod_price { font-size: 1.625rem; }
+.cb_border_1 {border: 1px solid rgba(69, 161, 77, 0.2);}
+.cb_card_PrescriptionInfo {padding: .75rem .75rem .75rem .75rem;}
+.cb_tabsWrapp {background-color: #F8F8F8;padding: .625rem;border-radius: .625rem;}
+.cb_cstTab {gap: .25rem;}
+.cb_cstTab > .nav-item {flex-grow: 1;}
+.cb_cstTab .nav-link {color: #000000;display: inline-flex; justify-content: center;align-items: center;gap: .25rem; width: 100%; font-weight: 600;font-size: var(--f-size-16);line-height: 1.3;border-radius: .25rem;padding: .563rem .75rem;}
+.cb_cstTab .nav-link.active {background-color: #45A14D;color: #fff;}
+.eb_cardStyle_1 {border: 1px solid #F6F6F6;border-radius: 1.25rem;padding: 2rem;}
+
+
+
 
 /**********************/
 /*** Responsive ***/
