HTMLizatin of Choose Prescription Method page

--- a/public/assets/css/cb-icons.css
+++ b/public/assets/css/cb-icons.css
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.cb-upload:before {
+  content: "\e91f";
+}
+.cb-notepad:before {
+  content: "\e920";
+}
 .cb-minus:before {
   content: "\e91d";
 }
