--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -88,6 +88,7 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {-webkit-appearance: none; margin: 0;}
 /* Firefox */
 input[type=number] {-moz-appearance: textfield;}
+.f-w-N{font-weight: normal;}
 .f-w-M{font-weight: 500;}
 .f-w-SB{font-weight: 600;}
 .f-w-B{font-weight: bold;}
@@ -145,6 +146,8 @@ animation: tp-rotateplane 1.2s infinite ease-in-out;border-radius: 0.5rem;}
 .login_btn{background: linear-gradient(90deg, #318138 0%, #45A14D 100%);border-radius: 0.5rem;color: #FFF;padding: 0.5rem 1.25rem;}
 .bgWrap{background-size: cover;}
 .secWrap{padding: 5rem 0;}
+.secWrap.tp-md {padding-top: 3.125rem !important;}
+.secWrap.bt-md {padding-bottom: 3.125rem !important;}
 .legelTxt{background: rgba(49, 129, 56, 0.3);border-radius: 1.25rem;padding: 0.625rem;}
 .slider-cont {padding-right: 2.813rem;}
 .countIcon{width: 3.75rem;min-width: 3.75rem;height: 3.75rem;border-radius: 100%;background: rgba(69, 161, 77, 0.2);}
@@ -366,7 +369,7 @@ animation: tp-rotateplane 1.2s infinite ease-in-out;border-radius: 0.5rem;}
 
 body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 .cb_linkBtn { display: inline-flex; align-items: center; gap: .75rem; font-size: var(--f-size-16); padding: 0; border-radius: 0; border: none; color: #677E67; }
-.cb_cmnBtn {background: linear-gradient(90deg, #318138 0%, #45A14D 100%) !important;color: #fff !important; border: 1px solid transparent !important;border-radius: .5rem;padding: .5rem .875rem; font-weight: 500; line-height: 1.2;display: inline-flex;justify-content: center; align-items: center; gap: .5rem;min-height: 2.5rem;}
+.cb_cmnBtn {background: linear-gradient(90deg, #318138 0%, #45A14D 100%) !important;color: #fff !important; border: 1px solid transparent !important;border-radius: .5rem;padding: .5rem .875rem; font-size: var(--f-size-16); font-weight: 500; line-height: 1.2;display: inline-flex;justify-content: center; align-items: center; gap: .5rem;min-height: 2.5rem;}
 .cb_cmnBtn.btn-o {background: transparent !important;border-color: rgba(69, 161, 77, 0.2) !important; color: #000 !important;}
 .cb_prodDtl_img { border: 1px solid #D9D9D9; border-radius: .625rem; }
 .cb_cstLabel { border: 1px solid rgba(69, 161, 77, 0.2); border-radius: 8px; font-size: var(--f-size-14); font-weight: 500; color: #000; padding: .375rem .625rem; min-width: 6.25rem; line-height: 1.3; text-align: center; }
@@ -420,7 +423,9 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 .cb_cstModal .modal-content {border-color: transparent;}
 .cb_cstModal .cb_cst_close { width: 1.125rem; min-width: 1.125rem; height: 1.125rem; padding: 0; opacity: 1 !important; }
 .cb_cstModal .modal-header, .cb_cstModal .modal-body, .cb_cstModal .modal-footer {padding-left: 1.5rem;padding-right: 1.5rem;}
-
+.cb_chooseMethod_card {border: 1px solid rgba(49, 129, 56, 0.2); padding: 1.5rem; border-radius: 1.25rem;}
+.cb_chooseMethod_card .icon {margin-bottom: 1rem;font-size: 4.25rem;}
+.cb_chooseMethod_card .btn_wrapper {margin-top: .75rem;}
 
 
 
@@ -476,6 +481,8 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
     .navbar-collapse.show{transform:translateX(0)}
     .navMng-In{max-height:100vh;height:100vh;padding:15px calc(3% + 15px);overflow:auto;-webkit-box-shadow:31px 0 36px -1px rgb(0 0 0 / 10%);-moz-box-shadow:31px 0 36px -1px rgba(0,0,0,.1);box-shadow:31px 0 36px -1px rgb(0 0 0 / 10%);background-color:#fff}
     .secWrap {padding: 30px 0;}
+    .secWrap.tp-md {padding-top: 30px !important;}
+    .secWrap.bt-md {padding-bottom: 30px !important;}
     .main-slider {margin-bottom: 25px;}
     .countBx {margin-bottom: 20px;}
     .title {line-height: 1.1;margin-bottom: 10px;}
@@ -491,6 +498,7 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
     .main-slider {max-width: 90%;margin-right: auto;margin-left: auto;}
 
     .eb_cardStyle_1 { padding: 1.25rem; }
+
 }
 @media (max-width:767px){
     .cb_patientSatisfaction_card { padding: 18px 12px; }
