--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -153,7 +153,7 @@ animation: tp-rotateplane 1.2s infinite ease-in-out;border-radius: 0.5rem;}
 .secWrap.bt-md {padding-bottom: 3.125rem !important;}
 .legelTxt{background: rgba(49, 129, 56, 0.3);border-radius: 1.25rem;padding: 0.625rem;}
 .slider-cont {padding-right: 2.813rem;}
-.countIcon{width: 3.75rem;min-width: 3.75rem;height: 3.75rem;border-radius: 100%;background: rgba(69, 161, 77, 0.2);}
+.countIcon{width: 3.75rem;min-width: 3.75rem;height: 3.75rem;border-radius: 100%;background: rgba(69, 161, 77, 0.2); color: var(--clr-secondary); font-size: var(--f-size-24);}
 .banner-img{border-radius: 1rem;}
 .main-slider:before{content: '';position: absolute;width: 100%;height: 100%;background: rgba(22, 162, 73, 0.2);border-radius: 1rem;transform: rotate(3deg);top: 0;left: 0;}
 .banner-img:before{content: '';background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(133, 194, 139, 0.405) 42.31%, rgba(69, 161, 77, 0.63) 100%);position: absolute;width: 100%;height: 100%;}
@@ -164,7 +164,7 @@ animation: tp-rotateplane 1.2s infinite ease-in-out;border-radius: 0.5rem;}
 .cstArrows .slick-next:before {background-image: url(../images/right-arrow.svg);}
 .cstArrows .slick-prev:before {background-image: url(../images/left-arrow.svg);}
 .section-bg{background-color: #F5F8F7;}
-.aboutIcon{width: 5.125rem;height: 5.125rem;border-radius: 100%;background: rgba(69, 161, 77, 0.2);}
+.aboutIcon{width: 5.125rem;height: 5.125rem;border-radius: 100%;background: rgba(69, 161, 77, 0.2); color: var(--clr-secondary); font-size: var(--f-size-34);}
 .aboutBx{background: #FFFFFF;border: 1px solid rgba(49, 129, 56, 0.2);border-radius: 1.25rem;padding: 1.563rem;}
 .germen_fremework{background: rgba(49, 129, 56, 0.1);border: 1px solid rgba(49, 129, 56, 0.2);border-radius: 1.25rem;padding: 2.188rem;}
 .legelList_wrap{background: rgba(69, 161, 77, 0.3);border-radius: 0.375rem;padding: 0.625rem 0.938rem;display: inline-block;}
@@ -474,8 +474,12 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 .alerterror_Msg_cst {display: inline-flex;align-items: center; gap: .375rem;border: 1px solid var(--clr-red);border-radius: 50px;padding: .625rem 1.375rem;font-size: var(--f-size-16);}
 .alerterror_Msg_cst .icon  {font-size: var(--f-size-22);color: var(--clr-red);}
 
-
-
+.cstPagination{display: flex; gap:15px; margin-top:2.188rem; justify-content: center;}
+.cstPagination .page-link{ background: #E5E5E5; color:#000000; border-radius: 0.5rem !important; padding: 0.625rem; min-width:2.188rem; height: 2.188rem; font-size:var(var(--f-size-14)); line-height: 1; display: block; text-align: center; }
+.cstPagination .page-link:hover{ background: linear-gradient(90deg, var(--clr-secondary) 0%, var(--clr-green) 100%); color:#ffffff; }
+.cstPagination .page-item.active .page-link{ background: linear-gradient(90deg, var(--clr-secondary) 0%, var(--clr-green) 100%); color:#ffffff; }
+.cstPagination .page-item:last-child .page-link, .cstPagination .page-item:first-child .page-link{ background: linear-gradient(90deg, var(--clr-secondary) 0%, var(--clr-green) 100%); color:#ffffff; }
+.cstPagination .page-item.disabled .page-link, .cstPagination .page-item.disabled .page-link{ opacity: .5; }
 
 
 /**********************/
@@ -566,3 +570,30 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 @media (max-width:575px){
     
 }
+
+
+.range-slider-container {
+  position: relative;
+}
+
+.range-labels {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  color: #333;
+  margin-bottom: 5px;
+    margin-top: 8px;
+}
+
+
+.cartModalOverlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.4); display: flex; justify-content: flex-end; z-index: 999; }
+.cartModalContent { background: #fff; width: 450px; height: 100%; display: flex; flex-direction: column; padding: 20px; animation: slideIn 0.3s ease forwards; }
+@keyframes slideIn { from { transform: translateX(100%); } to { transform: translateX(0%); } }
+.cartModalHeader { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #ddd; padding-bottom: 10px; }
+.closeBtn { background: none; border: none; font-size: 18px; cursor: pointer; color: #000000 !important; }
+.cartItems { flex: 1; overflow-y: auto; padding-bottom: 15px; }
+.cartItem { display: flex; align-items: center; gap:15px; padding: 0.938rem 0; border-bottom: 1px solid rgba(49, 129, 56, 0.2); }
+.cartItem .cartImg { display: flex; align-items: center; justify-content: center; max-width: 95px; height: 95px; border: 1px solid rgba(49, 129, 56, 0.2); padding: 10px; border-radius:10px; }
+.cartItem .cartImg img { width: 100%; height: 100%; object-fit: contain; }
+.cartModalFooter { border-top: 1px solid rgba(49, 129, 56, 0.2); padding-top: 15px; }
+.pharmacyInfo{padding: 15px; border: 1px solid rgba(49, 129, 56, 0.2); border-radius: 10px;}
