--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -481,6 +481,20 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 .cstPagination .page-item:last-child .page-link, .cstPagination .page-item:first-child .page-link{ background: linear-gradient(90deg, var(--clr-secondary) 0%, var(--clr-green) 100%); color:#ffffff; }
 .cstPagination .page-item.disabled .page-link, .cstPagination .page-item.disabled .page-link{ opacity: .5; }
 
+.cartModalOverlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.4); display: flex; justify-content: flex-end; z-index: 999; }
+.cartModalContent { background: #fff; width: 450px; height: 100%; display: flex; flex-direction: column; padding: 20px; animation: slideIn 0.3s ease forwards; }
+@keyframes slideIn { from { transform: translateX(100%); } to { transform: translateX(0%); } }
+.cartModalHeader { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #ddd; padding-bottom: 10px; }
+.closeBtn { background: none; border: none; font-size: 18px; cursor: pointer; color: #000000 !important; }
+.cartItems { flex: 1; overflow-y: auto; padding-bottom: 15px; }
+.cartItem { display: flex; align-items: center; gap:15px; padding: 0.938rem 0; border-bottom: 1px solid rgba(49, 129, 56, 0.2); }
+.cartItem .cartImg { display: flex; align-items: center; justify-content: center; max-width: 95px; height: 95px; border: 1px solid rgba(49, 129, 56, 0.2); padding: 10px; border-radius:10px; }
+.cartItem .cartImg img { width: 100%; height: 100%; object-fit: contain; }
+.cartModalFooter { border-top: 1px solid rgba(49, 129, 56, 0.2); padding-top: 15px; }
+.pharmacyInfo{padding: 15px; border: 1px solid rgba(49, 129, 56, 0.2); border-radius: 10px;}
+.noCart .cartIcon{max-width: 120px; opacity: .2;}
+.deleteBtn{max-width: 20px;}
+.deleteBtn img{filter: invert(31%) sepia(66%) saturate(6878%) hue-rotate(335deg) brightness(96%) contrast(108%);}
 
 /**********************/
 /*** Responsive ***/
@@ -586,14 +600,3 @@ body [data-aos=fade-up] { transform: translate3d(0,30px,0); }
 }
 
 
-.cartModalOverlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.4); display: flex; justify-content: flex-end; z-index: 999; }
-.cartModalContent { background: #fff; width: 450px; height: 100%; display: flex; flex-direction: column; padding: 20px; animation: slideIn 0.3s ease forwards; }
-@keyframes slideIn { from { transform: translateX(100%); } to { transform: translateX(0%); } }
-.cartModalHeader { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #ddd; padding-bottom: 10px; }
-.closeBtn { background: none; border: none; font-size: 18px; cursor: pointer; color: #000000 !important; }
-.cartItems { flex: 1; overflow-y: auto; padding-bottom: 15px; }
-.cartItem { display: flex; align-items: center; gap:15px; padding: 0.938rem 0; border-bottom: 1px solid rgba(49, 129, 56, 0.2); }
-.cartItem .cartImg { display: flex; align-items: center; justify-content: center; max-width: 95px; height: 95px; border: 1px solid rgba(49, 129, 56, 0.2); padding: 10px; border-radius:10px; }
-.cartItem .cartImg img { width: 100%; height: 100%; object-fit: contain; }
-.cartModalFooter { border-top: 1px solid rgba(49, 129, 56, 0.2); padding-top: 15px; }
-.pharmacyInfo{padding: 15px; border: 1px solid rgba(49, 129, 56, 0.2); border-radius: 10px;}
